fixes game_popup dimensions on mobile

--- a/index.css
+++ b/index.css
@@ -105,8 +105,6 @@ body {
 #game_popup {
     position:fixed;
     visibility:hidden;
-    width:100vw;
-    height:100vh;
 }
 #game_iframe {
     border:none;
